--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
-    "gh-pages": "^4.0.0",
     "leaflet": "^1.8.0",
     "leaflet-routing-machine": "^3.2.12",
     "moment": "^2.29.4",
@@ -48,9 +47,7 @@
     "start-https": "HTTPS=true SSL_CRT_FILE='./.cert/cert.pem' SSL_KEY_FILE='./.cert/key.pem' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -61,7 +58,6 @@
       "no-unused-expressions": "warn"
     }
   },
-  "homepage": "https://github.com/Atanasov-A/mobi-context-tracking-deployment",
   "browserslist": {
     "production": [
       ">0.2%",
